MFC r330245:

Allow the "@" and "!" characters in passwd file GECOS fields.

Two PRs (152084 & 210187) request allowing the "@" and/or "!"
characters in the passwd file GECOS field. The man page for pw does
not mention that those characters are disallowed, Linux supports those
characters in this field, and the "@" character in particular would be
useful for storing email addresses in that field.

PR:             152084, 210187
Submitted by:   jschauma@netmeister.org, Dave Cottlehuber <dch@freebsd.org>
Reported by:    jschauma@netmeister.org, Dave Cottlehuber <dch@freebsd.org>
Sponsored by:   Dell EMC